--- a/server/build.gradle
+++ b/server/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'org.json', name: 'json', version: '20160810'
 }
